@@ -70,6 +70,7 @@ Hbase Change Log
    HBASE-442   Move internal classes out of HRegionServer
    HBASE-466   Move HMasterInterface, HRegionInterface, and 
                HMasterRegionInterface into o.a.h.h.ipc
+   HBASE-479   Speed up TestLogRolling
    
 Branch 0.1
 
